--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -7,12 +7,12 @@
     "theme_color": "#F5F5F5",
     "background_color": "#0066ff",
     "icons": [{
-        "src": "/images/icons-192.png",
+        "src": "./images/icons-192.png",
         "type": "image/png",
         "sizes": "192x192",
-        "purpose": "any maskable"
+        "purpose": "any monochrome"
     }, {
-        "src": "/images/icons-512.png",
+        "src": "./images/icons-512.png",
         "type": "image/png",
         "sizes": "512x512"
     }]
