--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -2,6 +2,7 @@
     "name": "Fitness Timer",
     "short_name": "fitnessTimer",
     "start_url": "./",
+    "scope": ".",
     "display": "standalone",
     "orientation": "portrait",
     "theme_color": "#F5F5F5",
