--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
         "url": "https: //github.com/AndreNuechter/fitness-timer"
     },
     "devDependencies": {
-        "eslint": "^7.19.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.22.1",
+        "eslint": "^8.27.0",
         "vite": "^3.2.2",
         "vite-plugin-minify": "^1.5.2",
         "vite-plugin-mkcert": "^1.10.1"
@@ -21,7 +19,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "lint": "eslint ./src --fix",
+        "lint": "eslint src --fix",
         "deploy": "npm run build && git add docs/. && git commit --amend --no-edit && git push --all"
     }
 }
